# Rust

./: Cargo.toml
1)hello_world/src/: main.rs
12)Splitting_modules_into_different_files/: Cargo.toml
12)Splitting_modules_into_different_files/src/front_of_house/: hosting.rs
2)guessing_game/src/: main.rs
6)control_structures/: Cargo.toml
Home_Work/.github/workflows/: general.yml
Home_Work/hw_1/: Cargo.toml
Home_Work/hw_1/src/: main.rs
Home_Work/hw_2/: Cargo.toml
Home_Work/hw_2/src/: task1.rs  task2.rs
Home_Work/hw_4/: Cargo.toml
Home_Work/hw_4/src/: main.rs  main1.rs
Rust_Book/11)restaurant/src/: lib.rs
Rust_Book/12)Splitting_modules_into_different_files/src/: lib.rs
Rust_Book/13)general_collections/: Cargo.toml
Rust_Book/13)general_collections/src/: main.rs  main1.rs  main2.rs
Rust_Book/14)error_processing/: Cargo.toml  hello.txt
Rust_Book/14)error_processing/src/: main.rs  main1.rs
Rust_Book/15)generic_types_types_and_lifetime/: Cargo.toml
Rust_Book/15)generic_types_types_and_lifetime/src/: lib.rs  main.rs  main1.rs  main2.rs
Rust_Book/16)automatic_tests/: Cargo.toml
Rust_Book/16)automatic_tests/src/: lib.rs
Rust_Book/16)automatic_tests/tests/: integration_test.rs
Rust_Book/3)variables/src/: main.rs
Rust_Book/4)data_types/src/: main.rs
Rust_Book/5)function/src/: main.rs
Rust_Book/6)control_structures/src/: main.rs
Rust_Book/7)possession/: Cargo.toml
Rust_Book/7)possession/src/: main.rs
Rust_Book/growth_project_management/: Cargo.toml
rustlings/aproverka/: dfdd.txt
проверка/: ывава.txt
(+16 files in other folders)
