[package]
name = "general_collections"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]

name = "main"
path = "src/main.rs"

[[bin]]

name = "main1"
path = "src/main1.rs"

[[bin]]

name = "main2"
path = "src/main2.rs"

[dependencies]
